--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -49,6 +49,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('debt.index' ) }}">Accounts Payable</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('deposit.index' ) }}">Deposits</a>
+                    </li>
                 </ul>
             </div>
         </div>
