--- a/app/templates/bank_transaction_ledger/index.html
+++ b/app/templates/bank_transaction_ledger/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 457px;">
-            <table class="table table-borderless table-hover">
+            <table class="table table-hover">
                 <thead class="sticky-top">
                     <tr class="table-secondary">
                     <th scope="col"># Id</th>
