--- a/app/templates/accounts_payable/associated_records.html
+++ b/app/templates/accounts_payable/associated_records.html
@@ -1,11 +1,11 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-    Loan Associated Records
+    Debt Associated Records
 {% endblock %}
 
 {% block content %}
-    <h3>Code: </h3>
+    <h3>Code: {{ debt.code }}</h3>
     <a href="{{ url_for('debt.index') }}" class="btn btn-light fs-6"><i class="bi bi-arrow-return-left"></i> Go back</a>
     <section class="modal fade" tabindex="-1" id="edit-debt-payment">
         <form id="edit-debt-payment-form">
@@ -59,15 +59,15 @@
     <div class="my-2 border rounded-3">
         <div class="rounded-top d-flex align-items-center justify-content-center p-2" style="height: 60px; background-color: rgba(219, 208, 53, 0.678);">
             <div class="me-auto">
-                <h4 class="d-flex justify-content-center">Loan Payments</h4>
+                <h4 class="d-flex justify-content-center">Debt Payments</h4>
             </div>                
             <div class="w-100" style="max-width: 217px;">
-                <input type="text" name="filter-input-loan-payment" id="filter-input-loan-payment-id" class="form-control"placeholder="Search...">
+                <input type="text" name="filter-input-debt-payment" id="filter-input-debt-payment-id" class="form-control"placeholder="Search...">
             </div>
         </div>
 
-        <div id="loan-payments-table-container" class="table-responsive overflow-y-auto" style="max-height: 322px;">
-            <table class="table table-borderless table-hover text-center" id="expenses-table">
+        <div id="debt-payments-table-container" class="table-responsive overflow-y-auto" style="max-height: 322px;">
+            <table class="table table-borderless table-hover text-center" id="debt-payment-table">
                 <thead class="sticky-top">
                     <tr class="table-success">
                         <th scope="col"># Id</th>
@@ -119,7 +119,7 @@
         </div>
     </div>
 
-    <p class="d-none" id="associated-records-endpoint-id">#</p>
+    <p class="d-none" id="associated-records-endpoint-id">{{ url_for('debt.associated_records_in_json', id=debt.id ) }}</p>
 
     <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
