--- a/app/templates/bank_accounts/stats.html
+++ b/app/templates/bank_accounts/stats.html
@@ -66,9 +66,9 @@
                                 <div class="stat-icon bg-secondary bg-opacity-25 text-secondary-emphasis">
                                     <svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="24px" fill="#9DC384"><path d="M440-280h80v-40h40q17 0 28.5-11.5T600-360v-120q0-17-11.5-28.5T560-520H440v-40h160v-80h-80v-40h-80v40h-40q-17 0-28.5 11.5T360-600v120q0 17 11.5 28.5T400-440h120v40H360v80h80v40ZM160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Zm0-80h640v-480H160v480Zm0 0v-480 480Z"/></svg>
                                 </div>
-                                <span class="badge bg-success bg-opacity-25 text-success">
+                                <!--<span class="badge bg-success bg-opacity-25 text-success">
                                     +15.7%
-                                </span>
+                                </span>-->
                             </div>
                             <h5 class="mb-1">Withdrawals</h5>
                             <h3 class="mb-3" id="monthly-withdrawals-total-id">$0</h3>
@@ -86,9 +86,9 @@
                                 <div class="stat-icon bg-danger bg-opacity-25 text-danger">
                                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="m720-80-56-56 63-64H480v-80h247l-63-64 56-56 160 160L720-80ZM80-440v-120h120v120H80Zm300 0q-58 0-99-41t-41-99v-160q0-58 41-99t99-41q58 0 99 41t41 99v160q0 58-41 99t-99 41Zm360 0q-58 0-99-41t-41-99v-160q0-58 41-99t99-41q58 0 99 41t41 99v160q0 58-41 99t-99 41Zm-360-80q25 0 42.5-17.5T440-580v-160q0-25-17.5-42.5T380-800q-25 0-42.5 17.5T320-740v160q0 25 17.5 42.5T380-520Zm360 0q25 0 42.5-17.5T800-580v-160q0-25-17.5-42.5T740-800q-25 0-42.5 17.5T680-740v160q0 25 17.5 42.5T740-520Z"/></svg>
                                 </div>
-                                <span class="badge bg-success bg-opacity-25 text-success">
+                                <!--<span class="badge bg-success bg-opacity-25 text-success">
                                     +12.5%
-                                </span>
+                                </span>-->
                             </div>
                             <h5 class="mb-1">Expenses</h5>
                             <h3 class="mb-3" id="monthly-expenses-total-id">$0</h3>
@@ -106,9 +106,9 @@
                                 <div class="stat-icon bg-primary bg-opacity-25 text-primary fs-5">
                                     <i class="bi bi-currency-dollar"></i>
                                 </div>
-                                <span class="badge bg-success bg-opacity-25 text-success">
+                                <!--<span class="badge bg-success bg-opacity-25 text-success">
                                     +8.2%
-                                </span>
+                                </span>-->
                             </div>
                             <h5 class="mb-1">Incomes</h5>
                             <h3 class="mb-3" id="monthly-incomes-total-id">$0</h3>
@@ -132,9 +132,9 @@
                                 <div class="stat-icon bg-warning bg-opacity-25 text-warning">
                                     <i class="fas fa-chart-line fs-4"></i>
                                 </div>
-                                <span class="badge bg-success bg-opacity-25 text-success">
+                                <!--<span class="badge bg-success bg-opacity-25 text-success">
                                     +12.5%
-                                </span>
+                                </span>-->
                             </div>
                             <h5 class="mb-1">Loans</h5>
                             <h3 class="mb-3" id="monthly-loans-total-id">$0</h3>
@@ -152,9 +152,9 @@
                             <div class="d-flex justify-content-between align-items-center mb-3">
                                 <div class="stat-icon bg-success bg-opacity-25 text-success">
                                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M480-520q-50 0-85-35t-35-85q0-50 35-85t85-35q50 0 85 35t35 85q0 50-35 85t-85 35ZM200-400q-33 0-56.5-23.5T120-480v-320q0-33 23.5-56.5T200-880h560q33 0 56.5 23.5T840-800v320q0 33-23.5 56.5T760-400H200Zm80-80h400q0-33 23.5-56.5T760-560v-160q-33 0-56.5-23.5T680-800H280q0 33-23.5 56.5T200-720v160q33 0 56.5 23.5T280-480Zm-80 0v-320 320ZM480-80l160-160-56-56-64 64v-128h-80v128l-64-64-56 56L480-80Z"/></svg>                                </div>
-                                <span class="badge bg-success bg-opacity-25 text-success">
+                                <!--<span class="badge bg-success bg-opacity-25 text-success">
                                     +15.7%
-                                </span>
+                                </span>-->
                             </div>
                             <h5 class="mb-1">Loan Payments</h5>
                             <h3 class="mb-3" id="monthly-loan-payment-total-id">$0</h3>
@@ -172,9 +172,9 @@
                                 <div class="stat-icon bg-secondary bg-opacity-25 text-secondary">
                                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M160-640h640v-80H160v80Zm-80-80q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v240H160v240h164v80H160q-33 0-56.5-23.5T80-240v-480ZM598-80 428-250l56-56 114 112 226-226 56 58L598-80ZM160-720v480-180 113-413Z"/></svg>
                                 </div>
-                                <span class="badge bg-success bg-opacity-25 text-success">
+                                <!--<span class="badge bg-success bg-opacity-25 text-success">
                                     +8.2%
-                                </span>
+                                </span>-->
                             </div>
                             <h5 class="mb-1">Credit Card Payments</h5>
                             <h3 class="mb-3" id="monthly-credit-card-payments-total-id">$0</h3>
@@ -182,6 +182,72 @@
                                 <div class="progress-bar bg-secondary" style="width: 100%"></div>
                             </div>
                             <small>Monthly credit card payments total</small>
+                        </div>
+                    </div>
+    
+                </div>
+            </div>
+    
+            <div class="col-lg-10" style="margin-top: 25px;">
+                <div class="row g-4">
+
+                    <!-- Users -->
+                    <div class="col-md-4">
+                        <div class="stat-card p-4">
+                            <div class="d-flex justify-content-between align-items-center mb-3">
+                                <div class="stat-icon bg-secondary bg-opacity-25 text-secondary">
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="24px" fill="#634FA2"><path d="M336-120q-91 0-153.5-62.5T120-336q0-38 13-74t37-65l142-171-97-194h530l-97 194 142 171q24 29 37 65t13 74q0 91-63 153.5T624-120H336Zm144-200q-33 0-56.5-23.5T400-400q0-33 23.5-56.5T480-480q33 0 56.5 23.5T560-400q0 33-23.5 56.5T480-320Zm-95-360h190l40-80H345l40 80Zm-49 480h288q57 0 96.5-39.5T760-336q0-24-8.5-46.5T728-423L581-600H380L232-424q-15 18-23.5 41t-8.5 47q0 57 39.5 96.5T336-200Z"/></svg>                                
+                                </div>
+                                <!--<span class="badge bg-success bg-opacity-25 text-success">
+                                    +8.2%
+                                </span>-->
+                            </div>
+                            <h5 class="mb-1">Deposits</h5>
+                            <h3 class="mb-3" id="monthly-deposits-total-id">$0</h3>
+                            <div class="progress mb-2">
+                                <div class="progress-bar" style="width: 100%; background-color: #634FA2;"></div>
+                            </div>
+                            <small>Monthly deposits total</small>
+                        </div>
+                    </div>
+    
+                    <!-- Orders -->
+                    <div class="col-md-4">
+                        <div class="stat-card p-4">
+                            <div class="d-flex justify-content-between align-items-center mb-3">
+                                <div class="stat-icon bg-secondary bg-opacity-25 text-primary-emphasis">
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#DFBAB1"><path d="M480-40q-112 0-206-51T120-227v107H40v-240h240v80h-99q48 72 126.5 116T480-120q75 0 140.5-28.5t114-77q48.5-48.5 77-114T840-480h80q0 91-34.5 171T791-169q-60 60-140 94.5T480-40Zm-36-160v-52q-47-11-76.5-40.5T324-370l66-26q12 41 37.5 61.5T486-314q33 0 56.5-15.5T566-378q0-29-24.5-47T454-466q-59-21-86.5-50T340-592q0-41 28.5-74.5T446-710v-50h70v50q36 3 65.5 29t40.5 61l-64 26q-8-23-26-38.5T482-648q-35 0-53.5 15T410-592q0 26 23 41t83 35q72 26 96 61t24 77q0 29-10 51t-26.5 37.5Q583-274 561-264.5T514-250v50h-70ZM40-480q0-91 34.5-171T169-791q60-60 140-94.5T480-920q112 0 206 51t154 136v-107h80v240H680v-80h99q-48-72-126.5-116T480-840q-75 0-140.5 28.5t-114 77q-48.5 48.5-77 114T120-480H40Z"/></svg>                                
+                                </div>
+                                <!--<span class="badge bg-success bg-opacity-25 text-success">
+                                    +15.7%
+                                </span>-->
+                            </div>
+                            <h5 class="mb-1">Debts</h5>
+                            <h3 class="mb-3" id="monthly-debts-total-id">$0</h3>
+                            <div class="progress mb-2">
+                                <div class="progress-bar" style="width: 100%; background-color: #DFBAB1;"></div>
+                            </div>
+                            <small>Monthly debts total</small>
+                        </div>
+                    </div>
+    
+                    <!-- Revenue -->
+                    <div class="col-md-4">
+                        <div class="stat-card p-4">
+                            <div class="d-flex justify-content-between align-items-center mb-3">
+                                <div class="stat-icon bg-secondary bg-opacity-25 text-danger-emphasis">
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="40px" fill="#3a778b"><path d="M480-40 360-160H186.67q-27 0-46.84-20.17Q120-200.33 120-226.67v-586.66q0-27 19.83-46.84Q159.67-880 186.67-880h586.66q26.34 0 46.5 19.83Q840-840.33 840-813.33v586.66q0 26.34-20.17 46.5Q799.67-160 773.33-160H600L480-40ZM186.67-226.67h200L480-133.33l93.33-93.34h200v-586.66H186.67v586.66ZM480-518Zm.07 191.33q82.6 0 137.93-58 55.33-58 55.33-135.33v-193.33H480q-78.3 0-135.82 55.18-57.51 55.18-57.51 138.44 0 29.04 8.83 55.71t25.17 51.67l-20 20q-10 10-10 23.33 0 13.33 10 23.33 10 10 23.16 9.84 13.17-.17 23.5-9.84l19-18q25.34 17.67 54.17 27.34 28.83 9.66 59.57 9.66Zm-.07-66.66q-16.33 0-32.83-5.34-16.5-5.33-32.5-13.33l110.66-110.67q10-10.04 10-23.85 0-13.81-10-23.81-10-10-23.33-10-13.33 0-23.33 10L367.33-459q-7-16.33-10.5-31.83t-3.5-29.3q0-55.2 38-90.87T480-646.67h126.67V-520q0 52.78-36.95 89.72-36.94 36.95-89.72 36.95ZM458-503Z"/></svg>
+                                </div>
+                                <!--<span class="badge bg-success bg-opacity-25 text-success">
+                                    +12.5%
+                                </span>-->
+                            </div>
+                            <h5 class="mb-1">Debt Payments</h5>
+                            <h3 class="mb-3" id="monthly-debt-payments-total-id">$0</h3>
+                            <div class="progress mb-2">
+                                <div class="progress-bar" style="width: 100%; background-color: #3a778b;"></div>
+                            </div>
+                            <small>Monthly debt payments total</small>
                         </div>
                     </div>
     
@@ -198,9 +264,9 @@
                                 <div class="stat-icon bg-secondary bg-opacity-25 text-primary-emphasis">
                                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5084C1"><path d="M200-200v-400h80v264l464-464 56 56-464 464h264v80H200Z"/></svg>
                                 </div>
-                                <span class="badge bg-success bg-opacity-25 text-success">
+                                <!--<span class="badge bg-success bg-opacity-25 text-success">
                                     +15.7%
-                                </span>
+                                </span>-->
                             </div>
                             <h5 class="mb-1">Incoming Transfers</h5>
                             <h3 class="mb-3" id="monthly-transfers-incomings-total-id">$0</h3>
@@ -218,9 +284,9 @@
                                 <div class="stat-icon bg-secondary bg-opacity-25 text-danger-emphasis">
                                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#BB271A"><path d="M480-263 120-623l56-57 304 304 224-224H520v-80h320v320h-80v-183L480-263Z"/></svg>
                                 </div>
-                                <span class="badge bg-success bg-opacity-25 text-success">
+                                <!--<span class="badge bg-success bg-opacity-25 text-success">
                                     +12.5%
-                                </span>
+                                </span>-->
                             </div>
                             <h5 class="mb-1">Outgoing Transfers</h5>
                             <h3 class="mb-3" id="monthly-transfers-outgoings-total-id">$0</h3>
