--- a/app/templates/bank_accounts/stats.html
+++ b/app/templates/bank_accounts/stats.html
@@ -50,6 +50,17 @@
     </table>
 </div>
 
+<div class="container border rounded-3 mt-2">
+    <div class="row align-items-stretch text-center my-2">
+         <h3>Yearly Cash Flow Chart</h3>
+        <div class=" d-flex justify-content-center">
+            <div class="chart-box">
+                <canvas id="yearly-association-stats"></canvas>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="container my-3">
     <div class="row">
         <div class="d-flex justify-content-center">
