moved table to beneath the yearly-total-per-association chart

--- a/app/templates/bank_accounts/stats.html
+++ b/app/templates/bank_accounts/stats.html
@@ -41,18 +41,10 @@
     </div>
 </div>
 
-<div id="cash-flow-table-container-id" class="table-responsive border rounded-3 mt-2" style="height: 180x;">
-    <table id="cash-flow-table-id" class="table table-hover">
-        <thead class="fs-6">
-        </thead>
-        <tbody>
-        </tbody>
-    </table>
-</div>
 
 <div class="container border rounded-3 mt-2">
     <div class="row align-items-stretch text-center my-2">
-         <h3>Yearly Cash Flow Chart</h3>
+        <h3>Yearly Total Per Bank Account Association</h3>
         <div class=" d-flex justify-content-center">
             <div class="chart-box">
                 <canvas id="yearly-total-per-association-chart"></canvas>
@@ -61,6 +53,14 @@
     </div>
 </div>
 
+<div id="cash-flow-table-container-id" class="table-responsive border rounded-3 mt-2" style="height: 180x;">
+    <table id="cash-flow-table-id" class="table table-hover">
+        <thead class="fs-6">
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+</div>
 <div class="container my-3">
     <div class="row">
         <div class="d-flex justify-content-center">
