changed color appereance of the line chart

--- a/app/templates/bank_accounts/stats.html
+++ b/app/templates/bank_accounts/stats.html
@@ -282,7 +282,7 @@
                             <h5 class="mb-1">Incoming Transfers</h5>
                             <h3 class="mb-3" id="monthly-transfers-incomings-total-id">$0</h3>
                             <div class="progress mb-2">
-                                <div class="progress-bar" style="width: 100%; background-color: rgb(93, 144, 255);"></div>
+                                <div class="progress-bar" style="width: 100%; background-color: #86acff;"></div>
                             </div>
                             <small>Monthly incoming transfers total</small>
                         </div>
