--- a/app/templates/incomes/index.html
+++ b/app/templates/incomes/index.html
@@ -189,6 +189,12 @@
                 </tbody>
             </table>
         </div>
+
+        <section>
+            <div class="d-flex flex-column">
+                <label for="" id="monthly-total-id">Total: ${{ total_amount(incomes) }}</label>
+            </div>
+        </section>
     </div>
 
 <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" rel="stylesheet">
