added a total lbl which updates automatically when filtering cash ledger records

--- a/app/templates/cashledger/index.html
+++ b/app/templates/cashledger/index.html
@@ -52,7 +52,7 @@
             </table>
         </div>
 
-        <p>Available Cash: {{ sum_result }}</p>
+        <p id="lbl-total">Available Cash: {{ sum_result }}</p>
     </div>
 
 <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" rel="stylesheet">
