--- a/app/templates/accounts_payable/index.html
+++ b/app/templates/accounts_payable/index.html
@@ -268,6 +268,26 @@
                 </tbody>
             </table>
         </div>
+
+        <section>
+            <div class="d-flex flex-column">
+                <div>
+                    <label id="lbl-total">Total: ${{ total_amount(debts) }}</label>
+                </div>
+                <div class="row">
+                    <div>
+                        <label for="" id="paid-debts">Paid Debts: {{ paids }}</label>
+                    </div>
+                    <div>
+                        <label for="" id="active-debts">Actives Debts: {{ actives }}</label>
+                    </div>
+                    <div>
+                        <label for="" id="remaining">Remaining to Collect: ${{ format_amount(ramaining_to_pay) }}</label>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </div>
     <input type="hidden" value="{{ url_for('debt.create') }}" id="createEndPoint">
     <input type="hidden" value="{{ url_for('debt_payment.create') }}" id="makePaymentEndPoint">
