--- a/app/templates/accounts_receivable/index.html
+++ b/app/templates/accounts_receivable/index.html
@@ -273,10 +273,10 @@
                 </div>
                 <div class="row">
                     <div>
-                        <label for="" id="paid-debts">Paid Debts: {{ paids }}</label>
+                        <label for="" id="paid-loans">Paid Loans: {{ paids }}</label>
                     </div>
                     <div>
-                        <label for="" id="active-debts">Actives Debts: {{ actives }}</label>
+                        <label for="" id="active-loans">Active Loans: {{ actives }}</label>
                     </div>
                     <div>
                         <label for="" id="remaining">Remaining to Collect: ${{ format_amount(remaining_to_collect) }}</label>
