added total label to update dynamically the sum of amounts of amounts when they're all being filtering

--- a/app/templates/deposits/index.html
+++ b/app/templates/deposits/index.html
@@ -171,6 +171,8 @@
                 </tbody>
             </table>
         </div>
+
+        <p id="lbl-total-deposits">Total Deposits: ${{ total_amount(deposits) }}</p>
     </div>
 
 <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" rel="stylesheet">
