--- a/app/templates/withdrawals/index.html
+++ b/app/templates/withdrawals/index.html
@@ -170,6 +170,7 @@
                 </tbody>
             </table>
         </div>
+        <p id="lbl-total-withdrawals">Total: ${{ total_amount(withdrawals) }}</p>
     </div>
 
 <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" rel="stylesheet">
