edited total label text content

--- a/app/templates/incomes/index.html
+++ b/app/templates/incomes/index.html
@@ -192,7 +192,7 @@
 
         <section>
             <div class="d-flex flex-column">
-                <label for="" id="monthly-total-id">Total: ${{ total_amount(incomes) }}</label>
+                <label id="monthly-total-id">Total This Month: ${{ total_amount(incomes) }}</label>
             </div>
         </section>
     </div>
