--- a/app/templates/credit_cards/ledger.html
+++ b/app/templates/credit_cards/ledger.html
@@ -6,7 +6,7 @@
 
     <div class="container w-100">
 
-        <h2>Bank Accounts Transactions</h2>
+        <h2>Credit Card Transactions</h2>
         <div class="d-flex justify-content-end gap-1 flex-wrap flex-md-nowrap mt-2">
             <div class="d-flex gap-1 w-100 align-items-center" style="max-width: 320px;">
                 <div class="w-md-auto mt-md-0">
@@ -33,7 +33,7 @@
                     <th scope="col"># Id</th>
                     <th scope="col">Ref. Code</th>
                     <th scope="col">Type</th>
-                    <th scope="col">Bank Account</th>
+                    <th scope="col">Credit Card</th>
                     <th scope="col">Amount</th>
                     <th scope="col">Before Update</th>
                     <th scope="col">After Update</th>
@@ -47,7 +47,7 @@
                         <th scope="row">{{ ledger.id }}</th>
                         <td>{{ ledger.reference_code }}</td>
                         <td>{{ ledger.transaction_type | title }}</td>
-                        <td>{{ ledger.bank_account.nick_name | title }}</td>
+                        <td>{{ ledger.credit_card.nick_name | title }}</td>
                         <td>{{ format_amount(ledger.amount) }}</td>
                         <td>{{ format_amount(ledger.before_update_balance) }}</td>
                         <td>{{ format_amount(ledger.after_update_balance) }}</td>
@@ -66,7 +66,7 @@
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 
 <script src="{{ url_for('static', filename='scripts/utils/utils.js' ) }}"></script>
-<script type="module" src="{{ url_for('static', filename='scripts/bank_transactions_ledger/filterData.js' ) }}"></script>
+<script type="module" src="{{ url_for('static', filename='scripts/credit_card_ledger/filterData.js' ) }}"></script>
 <script type="module" src="{{ url_for('static', filename='scripts/utils/asyncHanlding.js' ) }}"></script>
 
 
