added p tag to show the total sum of ledgers when they are filtered

--- a/app/templates/credit_cards/ledger.html
+++ b/app/templates/credit_cards/ledger.html
@@ -59,6 +59,8 @@
         </div>
     </div>
 
+    <p id="lbl-total-ledgers">Total: {{ total_amount(ledgers) }}</p>
+
 <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
