added input text

--- a/app/templates/bank_accounts/ledger.html
+++ b/app/templates/bank_accounts/ledger.html
@@ -19,6 +19,9 @@
                     </select>
                 </div>
             </div>
+            <div class="w-100 w-md-auto mt-md-0">
+                <input type="text" class="form-control" id="filter-byfiled-input-id">
+            </div>
             <div class="d-flex gap-1 w-100" style="max-width: 350px;">
                 <div class="w-100 w-md-auto mt-md-0">
                     <input type="text" class="form-control" id="filter-input-id">
