--- a/app/templates/cashledger/index.html
+++ b/app/templates/cashledger/index.html
@@ -8,7 +8,7 @@
 
         <h2>Cash Ledger</h2>
         <div class="d-flex justify-content-end gap-1 flex-wrap flex-md-nowrap mt-2">
-            <div class="d-flex gap-1 w-100 align-items-center" style="max-width: 320px;">
+            <!--<div class="d-flex gap-1 w-100 align-items-center" style="max-width: 320px;">
                 <div class="w-md-auto mt-md-0">
                     <label for="" class="fs-6 fw-bold">Filter by: </label>
                 </div>
@@ -18,10 +18,13 @@
                         <option value="time">Time</option>
                     </select>
                 </div>
+            </div>-->
+            <div class="w-100 w-md-auto mt-md-0" style="max-width: 320px;">
+                <input type="text" class="form-control" id="filter-byfiled-input-id" placeholder="Enter some text...">
             </div>
             <div class="d-flex gap-1 w-100" style="max-width: 350px;">
                 <div class="w-100 w-md-auto mt-md-0">
-                    <input type="text" class="form-control" id="filter-input-id">
+                    <input type="text" class="form-control" id="filter-bytime-input-id" placeholder="Select a time frame">
                 </div>
                 <button type="button" class="btn btn-outline-success" id="btn-search-id"><i class="bi bi-search"></i></button>
             </div>
@@ -54,6 +57,8 @@
 
         <p id="lbl-total">Available Cash: {{ sum_result }}</p>
     </div>
+
+<input type="hidden" name="" id="filter-data-endpoint" value="{{ url_for('cashledger.filter_all' ) }}">
 
 <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
