--- a/app/templates/accounts_receivable/index.html
+++ b/app/templates/accounts_receivable/index.html
@@ -181,20 +181,13 @@
                     New Account Receivable
                 </button>
                 <div class="d-flex gap-1 w-100 align-items-center" style="max-width: 320px;">
-                    <div class="w-md-auto mt-md-0">
-                        <label for="" class="fs-6 fw-bold">Filter by: </label>
-                    </div>
-                    <div class="w-100 w-md-auto mt-md-0" style="max-width: 250px;">
-                        <select class="form-select" id="select-filter-type-id">
-                            <option value="field">Field</option>
-                            <option value="time">Time</option>
-                        </select>
+                    <div class="w-100 w-md-auto mt-md-0" style="max-width: 320px;">
+                        <input type="text" class="form-control" id="filter-byfiled-input-id" placeholder="Enter some text...">
                     </div>
                 </div>
-    
                 <div class="d-flex gap-1 w-100" style="max-width: 350px;">
                     <div class="w-100 w-md-auto mt-md-0">
-                        <input type="text" class="form-control" id="filter-input-id">
+                        <input type="text" class="form-control" id="filter-bytime-input-id" placeholder="Select a time frame">
                     </div>
                     <button type="button" class="btn btn-outline-success" id="btn-search-id"><i class="bi bi-search"></i></button>
                 </div>
@@ -287,6 +280,7 @@
     </div>
     <input type="hidden" value="{{ url_for('accounts_receivable.create_loan') }}" id="createEndPoint">
     <input type="hidden" value="{{ url_for('accounts_receivable.create_loan_payment') }}" id="makePaymentEndPoint">
+    <input type="hidden" value="{{ url_for('accounts_receivable.filter_loans_all') }}" id="filter-data-endpoint">
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" rel="stylesheet">
