--- a/app/templates/deposits/index.html
+++ b/app/templates/deposits/index.html
@@ -110,19 +110,13 @@
             >New Deposit <i class="bi bi-coin"></i>
             </button>
             <div class="d-flex gap-1 w-100 align-items-center" style="max-width: 320px;">
-                <div class="w-md-auto mt-md-0">
-                    <label for="" class="fs-6 fw-bold">Filter by: </label>
-                </div>
-                <div class="w-100 w-md-auto mt-md-0" style="max-width: 250px;">
-                    <select class="form-select" id="select-filter-type-id">
-                        <option value="field">Field</option>
-                        <option value="time">Time</option>
-                    </select>
+                <div class="w-100 w-md-auto mt-md-0" style="max-width: 320px;">
+                    <input type="text" class="form-control" id="filter-byfiled-input-id" placeholder="Enter some text...">
                 </div>
             </div>
             <div class="d-flex gap-1 w-100" style="max-width: 350px;">
                 <div class="w-100 w-md-auto mt-md-0">
-                    <input type="text" class="form-control" id="filter-input-id">
+                    <input type="text" class="form-control" id="filter-bytime-input-id" placeholder="Select a time frame">
                 </div>
                 <button type="button" class="btn btn-outline-success" id="btn-search-id"><i class="bi bi-search"></i></button>
             </div>
@@ -174,6 +168,8 @@
 
         <p id="lbl-total-deposits">Total Deposits: ${{ total_amount(deposits) }}</p>
     </div>
+
+    <input type="hidden" name="" id="filter-data-endpoint" value="{{ url_for('deposit.filter_all' ) }}">
 
 <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
