--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -39,6 +39,30 @@
     </div>
 </div>
 
+<!-- Fancy Dark Mode Card -->
+<div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center my-5 w-100" style="max-width: 320px;">
+      <div class="card dark-card p-3 w-100">
+        <h5 class="mb-3 text-light">Select a year for the report</h5>
+    
+        <select class="form-select dark-select">
+          <option value="2026" selected>2026</option>
+          <option value="2025">2025</option>
+        </select>
+      </div>
+    </div>
+</div>
+
+<div>
+    <div class="chart-box">
+        <canvas id="yearly-stats-all-models"></canvas>
+    </div>
+</div>
+
+
+</div>
+
+<input type="hidden" name="" id="yearly-stats-all-models-endpoint" value="{{ url_for('stats.all_model_reports' ) }}">
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="../../static/scripts/home/stats.js"></script>
