added canvas to display a new chart

--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -14,6 +14,12 @@
         width: 100% !important;
         height: 100% !important;
     }
+    
+    .chart-container {
+        height: 350px;   /* change this to whatever you want */
+        width: 100%;
+        position: relative;
+    }
 
     /* Mobile */
     @media (max-width: 576px) {
@@ -41,7 +47,7 @@
 
 <!-- Fancy Dark Mode Card -->
 <div class="d-flex justify-content-center">
-    <div class="d-flex justify-content-center my-5 w-100" style="max-width: 320px;">
+    <div class="d-flex justify-content-cente w-100" style="max-width: 320px;">
       <div class="card dark-card p-3 w-100">
         <h5 class="mb-3 text-light">Select a year for the report</h5>
     
@@ -53,12 +59,13 @@
     </div>
 </div>
 
-<div>
-    <div class="chart-box">
+<div class="border rounded-3 mt-2 w-100 p-2">
+    <h3 class="text-center">Yearly Total All Models</h3>
+
+    <div class="chart-container">
         <canvas id="yearly-stats-all-models"></canvas>
     </div>
 </div>
-
 
 </div>
 
