--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -46,9 +46,9 @@
 </div>
 
 <!-- Fancy Dark Mode Card -->
-<div class="d-flex justify-content-center">
+<div class="d-flex justify-content-center mt-2">
     <div class="d-flex justify-content-cente w-100" style="max-width: 320px;">
-      <div class="card dark-card p-3 w-100">
+      <div class="border-top border-start border-end rounded-top-3 p-3 w-100">
         <h5 class="mb-3 text-light">Select a year for the report</h5>
     
         <select class="form-select dark-select">
@@ -59,7 +59,7 @@
     </div>
 </div>
 
-<div class="border rounded-3 mt-2 w-100 p-2">
+<div class="border rounded-3 w-100 p-2">
     <h3 class="text-center">Yearly Total All Models</h3>
 
     <div class="chart-container">
